cmake_minimum_required(VERSION 2.6)
PROJECT(oce-win-bundle)

# Policy CMP0043 introduced in cmake version 3.0 IGNORES the use of COMPILE_DEFINITIONS suffixed variables, e.g. COMPILE_DEFINITIONS_DEBUG
# Set to OLD behavior until minimum cmake version >= 2.8.10 (version that COMPILE_DEFINITIONS can be set by generator expressions instead)
if (POLICY CMP0043)
	cmake_policy(SET CMP0043 OLD)
endif (POLICY CMP0043)

REMOVE_DEFINITIONS("-DHAVE_CONFIG_H")
IF(MSVC)
    SET(CMAKE_DEBUG_POSTFIX "d")
ENDIF(MSVC)

SET(FT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/freetype)
SET(GL2PS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/gl2ps)
SET(FREEIMAGE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage)
SET(LIBPNG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage/Source/LibPNG/)
SET(ZLIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/FreeImage/Source/zlib/)

SET(BUNDLE_SHARED_LIBRARIES OCE_BUILD_SHARED_LIB)
SET(BUNDLE_BUILD_FREETYPE ON)
SET(BUNDLE_BUILD_GL2PS OCE_WITH_GL2PS)
SET(BUNDLE_BUILD_FREEIMAGE OCE_WITH_FREEIMAGE)

IF(BUNDLE_SHARED_LIBRARIES)
  SET(BUNDLE_LIB_MODIFIER "SHARED")
ELSE()
  SET(BUNDLE_LIB_MODIFIER "")
ENDIF()

SET( OCE_WIN_BUNDLE_INSTALL_DIR_BITS ${OCE_WIN_BUNDLE_INSTALL_DIR}/Win${BIT}/)

IF(BUNDLE_BUILD_FREETYPE)
  ADD_SUBDIRECTORY(libs/freetype)
ENDIF()

IF(BUNDLE_BUILD_GL2PS)
  ADD_SUBDIRECTORY(gl2ps.cmake)
ENDIF()

IF(BUNDLE_BUILD_FREEIMAGE)
  ADD_SUBDIRECTORY(FreeImage.cmake)
ENDIF()
